examples/chill/testcases/RIGHTANSWERS/regression1.py.stderr
  File "shift_to3.script", line 10
    source: shift_to.c
          ^
SyntaxError: invalid syntax
  File "scale4.script", line 10
    source: scale.c
          ^
SyntaxError: invalid syntax
  File "peel8.script", line 8
    source: peel5678.c
          ^
SyntaxError: invalid syntax
  File "unroll1b.script", line 5
    source: unroll1.c
          ^
SyntaxError: invalid syntax
  File "p49.script", line 6
    source: p49.c
          ^
SyntaxError: invalid syntax
  File "permute2.script", line 10
    source: permute123456.c
          ^
SyntaxError: invalid syntax
  File "split1.script", line 10
    source: split.c
          ^
SyntaxError: invalid syntax
  File "p47.script", line 6
    source: p47.c
          ^
SyntaxError: invalid syntax
  File "permute8.script", line 10
    source: permute8910.c
          ^
SyntaxError: invalid syntax
  File "nonunimodular.script", line 9
    source: nonunimodular.sp2
          ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "regression1.py", line 84, in <module>
    statstruct = os.stat( dest )
OSError: [Errno 2] No such file or directory: 'nonunimodularmodified.sp2'
